// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwitterImage Component matches the snapshot for a landscape image in a summary card 1`] = `
<div
  className="jLTIie"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="cqvCVM"
    src="https://yoast.com/app/uploads/2019/03/Storytelling_FI.jpg"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot for a landscape image in a summary-large-image card 1`] = `
<div
  className="lfxhMm"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="cqvCVM"
    src="https://yoast.com/app/uploads/2019/03/Storytelling_FI.jpg"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot for a square image in a summary card 1`] = `
<div
  className="jLTIie"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="eBvJrP"
    src="https://yoast.com/app/uploads/2015/09/Avatar_Marieke_500x500-250x250.png"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot for a square image in a summary-large-image card 1`] = `
<div
  className="lfxhMm"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <img
    alt=""
    className="eBvJrP"
    src="https://yoast.com/app/uploads/2015/09/Avatar_Marieke_500x500-250x250.png"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot in the loading state 1`] = `
<div
  className="eMnoJh"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Select image
</div>
`;
